--- a/errorTasks.html
+++ b/errorTasks.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Error Tasks Viewer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Error Tasks</title>
   <style>
     body {
       background: #1e1f26;
@@ -11,136 +11,94 @@
       font-family: 'Poppins', sans-serif;
       padding: 20px;
     }
-
     h1 {
       text-align: center;
-      margin-bottom: 20px;
       color: #ffc107;
+      margin-bottom: 20px;
     }
-
-    .task-item {
+    .task {
       background: #2a2b32;
       border: 2px solid #444754;
-      border-radius: 12px;
+      border-radius: 10px;
       padding: 15px;
       margin-bottom: 15px;
     }
-
-    .task-item strong {
-      color: #ffc107;
-    }
-
-    .task-item button {
+    .task button {
       background: #d32f2f;
       color: #fff;
       border: none;
-      padding: 8px 14px;
-      border-radius: 6px;
-      font-weight: bold;
+      padding: 6px 12px;
+      border-radius: 5px;
       margin-top: 10px;
       cursor: pointer;
-      transition: background 0.2s ease;
     }
-
-    .task-item button:hover {
+    .task button:hover {
       background: #b71c1c;
-    }
-
-    .note {
-      color: #bbb;
-      font-size: 14px;
-      margin-bottom: 20px;
-      text-align: center;
     }
   </style>
 </head>
 <body>
 
-  <h1>Errored Tasks</h1>
-  <div class="note">These are all tasks, even broken ones. You can attempt to delete them manually.</div>
+  <h1>All Tasks (Including Broken)</h1>
   <div id="taskList">Loading...</div>
 
   <script>
-    async function fetchAndDisplayAllTasks() {
-      const adminEmail = localStorage.getItem("currentAdminEmail");
-      const taskList = document.getElementById("taskList");
+    let fullTaskList = [];
 
-      if (!adminEmail) {
-        taskList.innerHTML = "<p style='color:#ccc;'>No admin email found. Please set it in localStorage as 'currentAdminEmail'.</p>";
+    async function loadTasks() {
+      const adminEmail = localStorage.getItem("currentAdminEmail");
+      if (!adminEmail) return alert("Missing adminEmail");
+
+      const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
+      const data = await res.json();
+
+      if (!data.tasks) {
+        document.getElementById("taskList").innerHTML = "Failed to load tasks.";
         return;
       }
 
-      try {
-        const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&t=${Date.now()}`, {
-          cache: "no-store"
-        });
-        const data = await res.json();
+      fullTaskList = data.tasks;
+      const container = document.getElementById("taskList");
+      container.innerHTML = "";
 
-        if (!res.ok) throw new Error(data.error || "Failed to fetch tasks");
+      fullTaskList.forEach((task, index) => {
+        const div = document.createElement("div");
+        div.className = "task";
 
-        taskList.innerHTML = "";
+        div.innerHTML = `
+          <strong>Index:</strong> ${index}<br>
+          <strong>Title:</strong> ${task.title || "(No title)"}<br>
+          <strong>Date:</strong> ${task.date || "(No date)"}<br>
+          <strong>Users:</strong> ${Array.isArray(task.users) ? task.users.join(", ") : "(None)"}<br>
+          <button onclick="deleteTask(${index})">Delete</button>
+        `;
 
-        if (!Array.isArray(data.tasks) || data.tasks.length === 0) {
-          taskList.innerHTML = "<p style='color:#ccc;'>No tasks found.</p>";
-          return;
-        }
-
-        data.tasks.forEach(task => {
-          const taskDiv = document.createElement("div");
-          taskDiv.className = "task-item";
-
-          const safeTitle = task.title || "(No title)";
-          const safeDate = task.date || "(No date)";
-          const safeUsers = Array.isArray(task.users) ? task.users.join(", ") : "(Invalid or missing)";
-
-          taskDiv.innerHTML = `
-            <strong>Title:</strong> ${safeTitle}<br>
-            <strong>Date:</strong> ${safeDate}<br>
-            <strong>Users:</strong> ${safeUsers}<br>
-            <button onclick="deleteTask('${safeTitle.replace(/'/g, "\\'")}', '${safeDate}')">Delete</button>
-          `;
-
-          taskList.appendChild(taskDiv);
-        });
-
-      } catch (err) {
-        console.error("Error loading tasks:", err);
-        taskList.innerHTML = `<p style="color:#ff4444;">Error loading tasks: ${err.message}</p>`;
-      }
+        container.appendChild(div);
+      });
     }
 
-    async function deleteTask(title, date) {
+    async function deleteTask(index) {
       const adminEmail = localStorage.getItem("currentAdminEmail");
-      const startDate = (date || "").split(" to ")[0];
+      if (!adminEmail) return alert("Missing adminEmail");
 
-      if (!adminEmail || !title || !startDate) {
-        alert("Missing adminEmail, title, or date. Cannot delete.");
-        return;
-      }
+      const confirmDelete = confirm("Are you sure you want to delete this task?");
+      if (!confirmDelete) return;
 
-      if (!confirm(`Are you sure you want to delete task "${title}"?`)) return;
+      const res = await fetch(`https://beemazing.onrender.com/api/delete-any-task?adminEmail=${encodeURIComponent(adminEmail)}&taskIndex=${index}`, {
+        method: "DELETE"
+      });
 
-      try {
-        const res = await fetch(`https://beemazing.onrender.com/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&title=${encodeURIComponent(title)}&date=${encodeURIComponent(startDate)}`, {
-          method: "DELETE",
-          headers: { "Content-Type": "application/json" }
-        });
+      const result = await res.json();
 
-        if (!res.ok) {
-          const err = await res.json();
-          throw new Error(err.error || "Delete failed");
-        }
-
-        alert(`Deleted task: ${title}`);
-        fetchAndDisplayAllTasks(); // refresh list
-      } catch (err) {
-        console.error("Delete failed:", err);
-        alert(`Failed to delete: ${err.message}`);
+      if (result.success) {
+        alert("Task deleted!");
+        loadTasks();
+      } else {
+        alert("Failed to delete: " + (result.error || "Unknown error"));
       }
     }
 
-    fetchAndDisplayAllTasks();
+    loadTasks();
   </script>
-
 </body>
 </html>
