--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -880,18 +880,36 @@
     title.textContent = "Select Tasks:";
     taskSelection.appendChild(title);
 
-    const filteredTasks = tasks.filter(task => {
-        const valid = task && task.title && task.date && Array.isArray(task.users) && task.users.length > 0;
-        if (!valid) {
-            console.warn("Skipping invalid task:", task);
-            return false;
+    const selectedDate = document.querySelector(".day.selected")?.dataset.date;
+    const visibleTasks = [];
+
+    for (const task of tasks) {
+        if (!task || !task.title || !task.date || !Array.isArray(task.users) || task.users.length === 0) continue;
+
+        const completions = task.completions?.[selectedDate] || [];
+        const hasUserCompleted = completions.includes(currentUser);
+        const totalCompletions = completions.length;
+
+        // Determine required completions
+        let required = 1;
+        if (task.repeat === "Daily") required = task.timesPerDay || 1;
+        if (task.repeat === "Weekly") required = task.timesPerWeek || 1;
+        if (task.repeat === "Monthly") required = task.timesPerMonth || 1;
+
+        let shouldInclude = false;
+
+        if (offerType === "offerHelp") {
+            // Only show if NOT fully completed by anyone
+            shouldInclude = totalCompletions < required;
+        } else if (offerType === "needHelp") {
+            // Only show if currentUser hasn't completed it
+            shouldInclude = task.users.includes(currentUser) && !hasUserCompleted;
         }
 
-        if (offerType === "offerHelp") return true;
-        return task.users.includes(currentUser);
-    });
+        if (shouldInclude) visibleTasks.push(task);
+    }
 
-    if (filteredTasks.length === 0) {
+    if (visibleTasks.length === 0) {
         const none = document.createElement("p");
         none.textContent = "No valid tasks available.";
         none.style.color = "#ccc";
@@ -899,7 +917,7 @@
         return;
     }
 
-    for (const task of filteredTasks) {
+    for (const task of visibleTasks) {
         const label = document.createElement("label");
         const checkbox = document.createElement("input");
         checkbox.type = "checkbox";
@@ -910,7 +928,6 @@
         taskSelection.appendChild(label);
     }
 }
-
 
 
 
