--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -750,7 +750,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center 1</div>
+        <div class="title">BeeMazing Help Center 11</div>
     </div>
 
     <div class="button-container">
@@ -816,6 +816,9 @@
             <button id="closeOfferBtn">Close</button>
         </div>
     </div>
+
+
+    <script src="/BeeMazing-Y1/shared/taskrotations.js?t=${Date.now()}"></script>
 
 
     <script>
