--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -750,7 +750,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center 11</div>
+        <div class="title">BeeMazing Help Center</div>
     </div>
 
     <div class="button-container">
@@ -879,15 +879,14 @@
 
 
             async function updateTaskSelection(offerType) {
-    const tasks = await fetchTasks(); // your backend call
-    const selectedDate = document.querySelector(".day.selected")?.dataset.date;
-    const currentUser = localStorage.getItem("currentUser"); // or however you get it
+    const tasks = await fetchTasks();
+    const selectedDate = new Date().toISOString().split("T")[0]; // use today
+    const currentUser = localStorage.getItem("currentUser");
+
     taskSelection.innerHTML = "<h4>Select Tasks:</h4>";
 
-    const adminEmail = localStorage.getItem("currentAdminEmail");
-
     for (const task of tasks) {
-        if (!task || !task.title || !task.date || !Array.isArray(task.users) || task.users.length === 0) continue;
+        if (!task || !task.title || !task.users?.length) continue;
 
         let turnData = { requiredTimes: 1, completedCount: 0, turns: [] };
 
@@ -906,14 +905,18 @@
         }
 
         const isFullyCompleted = turnData.completedCount >= turnData.requiredTimes;
-        const hasUserCompleted = turnData.turns?.some(t => t.user === currentUser && (t.isCompleted || t.isPending));
+        const currentUserTurn = turnData.turns?.find(t => t.user === currentUser);
+        const hasUserTurn = Boolean(currentUserTurn);
+        const hasUserCompleted = currentUserTurn?.isCompleted;
 
-        // Show only relevant tasks
         let showTask = false;
+
         if (offerType === "offerHelp") {
+            // Show only if task still has incomplete progress overall
             showTask = !isFullyCompleted;
         } else if (offerType === "needHelp") {
-            showTask = task.users.includes(currentUser) && !hasUserCompleted;
+            // Show only if this user still has a pending task
+            showTask = hasUserTurn && !hasUserCompleted;
         }
 
         if (showTask) {
@@ -935,8 +938,6 @@
         taskSelection.appendChild(none);
     }
 }
-
-
 
 
 
