--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -750,7 +750,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center 5</div>
+        <div class="title">BeeMazing Help Center 1</div>
     </div>
 
     <div class="button-container">
@@ -882,16 +882,22 @@ if (currentUser) {
 
 
 
-            async function updateTaskSelection(offerType) {
-    const tasks = await fetchTasks();
-    const selectedDate = new Date().toISOString().split("T")[0]; // use today
-    const currentUser = new URLSearchParams(window.location.search).get("user");
 
+
+            async function updateTaskSelection(offerType) {
+    const taskSelection = document.getElementById("taskSelection"); // Ensure this is defined
+    const tasks = await fetchTasks();
+    const urlParams = new URLSearchParams(window.location.search);
+    const currentUser = urlParams.get("user");
+    const selected = document.querySelector(".day.selected");
+    const selectedDate = selected?.dataset.date || new Date().toISOString().split("T")[0];
+
+    const filteredTasks = filterTasksForDate(tasks, selectedDate);
 
     taskSelection.innerHTML = "<h4>Select Tasks:</h4>";
 
-    for (const task of tasks) {
-        if (!task || !task.title || !task.users?.length) continue;
+    for (const task of filteredTasks) {
+        if (!task || !task.title || !task.users?.includes(currentUser)) continue;
 
         let turnData = { requiredTimes: 1, completedCount: 0, turns: [] };
 
@@ -900,52 +906,50 @@ if (currentUser) {
                 turnData = mixedTurnData(task, selectedDate);
             } else if (task.settings?.includes("Individual") && typeof individualTurnData === "function") {
                 turnData = individualTurnData(task, selectedDate);
-            } else {
-                const completions = task.completions?.[selectedDate] || [];
-                turnData.completedCount = completions.length;
-                turnData.requiredTimes = 1;
             }
         } catch (e) {
-            console.warn("Error computing turnData for task", task.title, e);
+            console.warn("Turn data error for task", task.title, e);
         }
 
-        const isFullyCompleted = turnData.completedCount >= turnData.requiredTimes;
-        const currentUserTurn = turnData.turns?.find(t => t.user === currentUser);
-        const hasUserTurn = Boolean(currentUserTurn);
-        const hasUserCompleted = currentUserTurn?.isCompleted;
+        const userTurns = turnData.turns.filter(t => t.user === currentUser);
+        const userCompleted = userTurns.filter(t => t.isCompleted || t.isPending).length;
 
-        let showTask = false;
+        const isRotation = task.settings?.includes("Rotation");
+        const isCompleted = isRotation
+            ? userCompleted >= userTurns.length
+            : userCompleted >= turnData.requiredTimes;
 
-        if (offerType === "offerHelp") {
-            // Show only if task still has incomplete progress overall
-            showTask = !isFullyCompleted;
-        } else if (offerType === "needHelp") {
-    // Show if the user is in today's turn rotation and hasn't completed yet
-    const scheduledToday = turnData.turns?.some(t => t.user === currentUser);
-    const alreadyCompleted = turnData.turns?.some(t => t.user === currentUser && t.isCompleted);
-    showTask = scheduledToday && !alreadyCompleted;
-}
+        let show = false;
 
+        if (offerType === "needHelp") {
+            const userHasTurn = userTurns.length > 0;
+            const userNotDone = userCompleted < (isRotation ? userTurns.length : turnData.requiredTimes);
+            show = userHasTurn && userNotDone;
+        } else if (offerType === "offerHelp") {
+            const taskNotDone = turnData.completedCount < turnData.requiredTimes;
+            show = taskNotDone;
+        }
 
-        if (showTask) {
+        if (show) {
             const label = document.createElement("label");
             const checkbox = document.createElement("input");
             checkbox.type = "checkbox";
             checkbox.name = "selectedTasks";
             checkbox.value = task.title;
             label.appendChild(checkbox);
-            label.append(` ${task.title} ${task.reward ? `(${task.reward} 🍯)` : ""}`);
+            label.append(` ${task.title} (${task.reward || 0} 🍯)`);
             taskSelection.appendChild(label);
         }
     }
 
-    if (taskSelection.children.length === 1) {
+    if (taskSelection.querySelectorAll("label").length === 0) {
         const none = document.createElement("p");
-        none.textContent = "No valid tasks available.";
+        none.textContent = "No tasks found for this category.";
         none.style.color = "#ccc";
         taskSelection.appendChild(none);
     }
 }
+
 
 
 
