--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -750,7 +750,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center 77</div>
+        <div class="title">BeeMazing Help Center 1</div>
     </div>
 
     <div class="button-container">
@@ -911,18 +911,18 @@
         const isFullyCompleted = turnData.completedCount >= turnData.requiredTimes;
 
         // Find current user's turn today
-        const userTurn = turnData.turns?.find(t => t.user === currentUser);
-        const hasUserTurnToday = !!userTurn;
-        const userAlreadyCompleted = userTurn?.isCompleted;
+        const userTurnsToday = (turnData.turns || []).filter(t => t.user === currentUser);
+const hasUserTurnToday = userTurnsToday.length > 0;
+const userAlreadyCompleted = userTurnsToday.every(t => t.isCompleted);
+
 
         let showTask = false;
 
         if (offerType === "offerHelp") {
             showTask = !isFullyCompleted;
         } else if (offerType === "needHelp") {
-            // Show task if user is scheduled to act today and hasn't completed yet
-            showTask = hasUserTurnToday && !userAlreadyCompleted;
-        }
+    showTask = hasUserTurnToday && !userAlreadyCompleted;
+}
 
         if (showTask) {
             const label = document.createElement("label");
