--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -581,225 +581,6 @@
             100% { box-shadow: 0 0 0 0 rgba(255, 202, 40, 0); }
         }
 
-        .task-selection label {
-            display: flex;
-            align-items: center;
-            margin: 10px 0;
-            font-size: 1rem;
-            color: var(--text-color);
-            padding: 8px;
-            border-radius: 10px;
-            transition: background 0.3s ease;
-        }
-
-        .task-selection label:hover {
-            background: rgba(255, 202, 40, 0.15);
-        }
-
-        .task-selection input[type="checkbox"] {
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-            width: 20px;
-            height: 20px;
-            margin-right: 12px;
-            background: #3A3D4A;
-            border: 2px solid var(--border-dark);
-            border-radius: 6px;
-            cursor: pointer;
-            position: relative;
-            transition: border-color 0.3s ease, background-color 0.3s ease;
-        }
-
-        .task-selection input[type="checkbox"]:checked {
-            background: var(--secondary-accent);
-            border-color: var(--secondary-accent);
-        }
-
-        .task-selection input[type="checkbox"]:checked::before {
-            content: '\2714';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: var(--secondary-color);
-            font-size: 14px;
-            font-weight: bold;
-        }
-
-        .task-selection input[type="number"] {
-            width: 130px;
-            padding: 12px;
-            margin-left: 14px;
-            background: #3A3D4A;
-            color: var(--text-color);
-            border: 2px solid var(--border-dark);
-            border-radius: 10px;
-            outline: none;
-            font-size: 0.95rem;
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .task-selection input[type="number"]::placeholder {
-            font-size: 0.95rem;
-            color: #BBBBBB;
-        }
-
-        .task-selection input[type="number"]:focus,
-        .task-selection input[type="number"]:hover {
-            border-color: var(--secondary-accent);
-            box-shadow: 0 0 8px rgba(255, 202, 40, 0.3);
-        }
-
-        .modal-content select {
-            width: 100%;
-            padding: 12px;
-            margin: 12px 0;
-            background: #3A3D4A;
-            color: var(--text-color);
-            border: 2px solid var(--border-dark);
-            border-radius: 10px;
-            font-size: 1rem;
-            outline: none;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            cursor: pointer;
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .modal-content select:focus,
-        .modal-content select:hover {
-            border-color: var(--secondary-accent);
-            box-shadow: 0 0 8px rgba(255, 202, 40, 0.3);
-        }
-
-        .modal-content #errorMessage {
-            color: var(--danger-color);
-            font-size: 0.9rem;
-            background: rgba(211, 47, 47, 0.25);
-            padding: 8px;
-            border-radius: 10px;
-            margin: 10px 0;
-            display: none;
-        }
-
-        .modal-content .button-group {
-            display: flex;
-            justify-content: center;
-            gap: 12px;
-            margin-top: 18px;
-        }
-
-        .modal-content button {
-            padding: 14px 28px;
-            border: none;
-            border-radius: 12px;
-            font-size: 1rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .modal-content #submitOfferBtn, .modal-content #proceedBtn {
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-accent));
-            color: var(--secondary-color);
-        }
-
-        .modal-content #submitOfferBtn:hover, .modal-content #proceedBtn:hover {
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(255, 202, 40, 0.4);
-        }
-
-        .modal-content #cancelOfferBtn {
-            background: var(--danger-color);
-            color: #FFFFFF;
-        }
-
-        .modal-content #cancelOfferBtn:hover {
-            background: #B71C1C;
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(211, 47, 47, 0.4);
-        }
-
-        .modal-content #viewOfferTitle {
-            color: var(--primary-color);
-            font-size: 1.6rem;
-            font-weight: 700;
-            margin-bottom: 18px;
-            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-        }
-
-        .modal-content #viewOfferTasks {
-            margin: 12px 0;
-            text-align: left;
-        }
-
-        .modal-content .accept-task-btn {
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-accent));
-            color: var(--secondary-color);
-        }
-
-        .modal-content .accept-task-btn:hover {
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(255, 202, 40, 0.4);
-        }
-
-        .modal-content #closeOfferBtn {
-            background: linear-gradient(45deg, var(--secondary-color), #2A2B32);
-            color: var(--primary-color);
-        }
-
-        .modal-content #closeOfferBtn:hover {
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-accent));
-            color: var(--secondary-color);
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(255, 202, 40, 0.4);
-        }
-
-        .task-details {
-            display: flex;
-            flex-direction: column;
-            margin: 12px 0;
-            text-align: left;
-            padding: 10px;
-            border-radius: 8px;
-            background: rgba(255, 202, 40, 0.05);
-        }
-
-        .task-name {
-            font-size: 1.1rem;
-            font-weight: 600;
-            color: var(--text-color);
-        }
-
-        .task-points {
-            font-size: 0.95rem;
-            color: var(--primary-color);
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        }
-
-        .you-receive {
-            font-size: 0.95rem;
-            color: var(--danger-color);
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-        }
-
-        .accept-task-btn {
-            padding: 10px 20px;
-            margin-top: 10px;
-            font-size: 0.95rem;
-            border-radius: 10px;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        @keyframes pulse {
-            0% { box-shadow: 0 0 0 0 rgba(255, 202, 40, 0.4); }
-            50% { box-shadow: 0 0 0 10px rgba(255, 202, 40, 0); }
-            100% { box-shadow: 0 0 0 0 rgba(255, 202, 40, 0); }
-        }
-
         @keyframes tick {
             0% { opacity: 1; }
             50% { opacity: 0.7; }
@@ -965,7 +746,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center</div>
+        <div class="title">BeeMazing Help Center 1</div>
     </div>
 
     <div class="container">
@@ -1087,6 +868,11 @@
 
         // Open Add Offer modal
         addOfferBtn.addEventListener('click', () => {
+            if (!adminEmail || !currentUser) {
+                errorMessage.textContent = 'Please log in to access the Help Center.';
+                errorMessage.style.display = 'block';
+                return;
+            }
             showModal(addOfferModal);
             resetOfferForm();
         });
@@ -1130,11 +916,30 @@
 
         // Load User Tasks for Need Help
         async function loadUserTasks() {
+            taskSelection.innerHTML = '<p>Loading tasks...</p>';
+            if (!adminEmail || !currentUser) {
+                taskSelection.innerHTML = '<p>Please log in to view your tasks.</p>';
+                errorMessage.textContent = 'User session invalid. Please log in again.';
+                errorMessage.style.display = 'block';
+                return;
+            }
+
             try {
-                const response = await fetch(`/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}`);
+                const response = await fetch(`/api/tasks?adminEmail=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(currentUser)}`, {
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${localStorage.getItem('token') || ''}`
+                    }
+                });
+
+                if (!response.ok) {
+                    const errorData = await response.json();
+                    throw new Error(errorData.message || `HTTP error! status: ${response.status}`);
+                }
+
                 const data = await response.json();
-                if (!data.tasks) {
-                    taskSelection.innerHTML = '<p>No tasks available.</p>';
+                if (!data.tasks || data.tasks.length === 0) {
+                    taskSelection.innerHTML = '<p>No tasks assigned to you today.</p>';
                     return;
                 }
 
@@ -1173,7 +978,9 @@
                 });
             } catch (err) {
                 console.error('Error fetching tasks:', err);
-                taskSelection.innerHTML = '<p>Failed to load tasks.</p>';
+                taskSelection.innerHTML = '<p>Failed to load tasks. Please try again later.</p>';
+                errorMessage.textContent = err.message || 'An error occurred while loading tasks.';
+                errorMessage.style.display = 'block';
             }
         }
 
@@ -1212,7 +1019,10 @@
             try {
                 const response = await fetch('/api/offers', {
                     method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
+                    headers: { 
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${localStorage.getItem('token') || ''}`
+                    },
                     body: JSON.stringify({ adminEmail, offer })
                 });
                 const data = await response.json();
@@ -1234,7 +1044,12 @@
         // Load Offers
         async function loadOffers() {
             try {
-                const response = await fetch(`/api/offers?adminEmail=${encodeURIComponent(adminEmail)}`);
+                const response = await fetch(`/api/offers?adminEmail=${encodeURIComponent(adminEmail)}`, {
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'Authorization': `Bearer ${localStorage.getItem('token') || ''}`
+                    }
+                });
                 const data = await response.json();
                 if (!data.offers) {
                     document.querySelectorAll('.no-offers').forEach(el => el.style.display = 'block');
@@ -1329,7 +1144,10 @@
                 try {
                     const response = await fetch('/api/offers', {
                         method: 'DELETE',
-                        headers: { 'Content-Type': 'application/json' },
+                        headers: { 
+                            'Content-Type': 'application/json',
+                            'Authorization': `Bearer ${localStorage.getItem('token') || ''}`
+                        },
                         body: JSON.stringify({ adminEmail, offerId })
                     });
                     const data = await response.json();
