--- a/shared/helpCenter.html
+++ b/shared/helpCenter.html
@@ -965,7 +965,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="title">BeeMazing Help Center 11</div>
+        <div class="title">BeeMazing Help Center aAAAA</div>
     </div>
 
     <div class="container">
@@ -1162,7 +1162,6 @@
         });
         </script>
         
-
 
 
 
