--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -631,32 +631,6 @@
 }
 
 
-
-
-.help-center-btn {
-    background: var(--secondary-color);
-    color: var(--accent-color);
-    padding: 4px 8px;
-    border-radius: 8px;
-    text-decoration: none;
-    font-weight: 600;
-    border: 2px solid var(--border-dark);
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s ease;
-    font-size: small;
-}
-.help-center-btn:hover {
-    background-color: #333;
-}
-.task-header-row {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start; /* <-- aligns items to the left */
-    gap: 12px;                   /* <-- adjust spacing between items */
-    margin-bottom: 10px;
-}
-
-
     </style>
 </head>
 <body>
@@ -701,11 +675,7 @@
               <p><strong>Buzz Points:</strong> <span id="rewardAmount">0</span> 🍯</p>
           </div>
           
-          <div class="task-header-row">
-            <a href="/BeeMazing-Y1/shared/helpCenter.html" class="help-center-btn">Help Center</a>
-            <h3 style="margin: 0;">Assigned Tasks:</h3>
-          </div>
-          
+            <h3>Assigned Tasks:</h3>
             <div id="userTasks" class="task-list">
                 <!-- Tasks will be displayed here -->
             </div>
